--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 #game {
   position: fixed;
-  top: 50%;
+  top: 60%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -25,4 +25,20 @@ body {
   font-family: "Comic Sans MS", "Comic Sans", cursive;
   background-color: rgba(16, 3, 46, 0);
   color: rgb(255, 203, 89);
+}
+
+#avatar-container {
+  width: 500px;
+  height: auto;
+  border: 2px solid black;
+  background-color: black;
+}
+
+.all-smash-bro-icons {
+  width: 30px;
+  height: 30px;
+}
+
+.all-smash-bro-icons:hover {
+  transform: scale(1.5);
 }
