--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
 }
 
 body {
+  cursor: url('images/smashBro\ \(11\).png'), auto;
   background: rgb(2,0,36);
   background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(89,89,130,1) 35%, rgba(0,212,255,1) 100%);
 }
@@ -41,6 +42,7 @@ body {
 
 .all-smash-bro-icons:hover {
   transform: scale(1.5);
+  cursor: pointer;
 }
 
 .win-icon {
