--- a/style.css
+++ b/style.css
@@ -52,3 +52,8 @@ body {
 @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
 @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
 @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
+.player-score-img {
+  width: 30px;
+  height: 30px;
+}
