--- a/style.css
+++ b/style.css
@@ -49,6 +49,15 @@ body {
   height: 60px;
   animation: spin 2s linear infinite;
 }
+
+.win-strikethrough {
+  width: 100px;
+  height: 100px;
+  background-size: contain;
+  animation: spin 2s linear infinite;
+}
+
+
 @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
 @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
 @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
